Fix spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -45,10 +45,8 @@ body {
 .details {
   margin: 0 auto;
   width: max-content;
-  padding: 10px;
   display: grid;
   row-gap: 20px;
-  column-gap: 20px;
   text-align: center;
 }
 
