--- a/src/styles/mediaQueries.css
+++ b/src/styles/mediaQueries.css
@@ -40,10 +40,6 @@
   #name {
     font-size:35px;
   }
-
-  .temp {
-    align-self: center;
-  }
   
   #temp {
     font-size: 20px;
